--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -18,8 +18,78 @@
     <br>
     <input type="submit" value="Generate Sentence">
   </form>
-    <blockquote>{{ sentence }}</blockquote>
+  <blockquote>{{ sentence }}</blockquote>
 </body>
+<style>
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("https://qph.cf2.quoracdn.net/main-qimg-5d3751dd92d8c7317b62e5f191fc3507");
+    background-size: cover;
+    background-color: #333;
+    color: #ecee9a;
+    font-family: 'Helvetica', sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+
+  header {
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 28px;
+    margin: 0;
+  }
+
+  form {
+    background-color: #c01212;
+    margin-top: 50px;
+    padding: 20px;
+    text-align: center;
+  }
+
+  label {
+    display: block;
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  input[type="range"] {
+    width: 300px;
+    margin-bottom: 20px;
+  }
+
+  output {
+    display: block;
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  input[type="submit"] {
+    background-color: #ecee9a;
+    color: #c01212;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+  input[type="submit"]:hover {
+    background-color: #e2e3c8;
+  }
+
+  blockquote {
+    border: #333;
+    background-color: #c01212;
+    padding: 1em;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 50px;
+  }
+</style>
 <script>
   let orderInput = document.getElementById("order");
   let orderValue = document.getElementById("order-value");
