--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -7,7 +7,7 @@
   <title>Tweet Generator</title>
 </head>
 <header>
-  <h1>1984 Generator</h1>
+  <h1>BIG BROTHER IS WATCHING</h1>
 </header>
 <body>
   <form action="/" method="post">
